--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,9 +20,9 @@
             console.log('base.html: window.cachedTabNum set to', window.cachedTabNum);
         })();
     </script>
-    <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}-20250427-v3"></script>
-    <script src="{{ url_for('static', filename='js/expand.js') }}?v={{ cache_bust }}-20250427-v3"></script>
-    <script src="{{ url_for('static', filename='js/tab1_5.js') }}?v={{ cache_bust }}-20250427-v3"></script>
+    <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}-20250427-v4"></script>
+    <script src="{{ url_for('static', filename='js/expand.js') }}?v={{ cache_bust }}-20250427-v4"></script>
+    <script src="{{ url_for('static', filename='js/tab1_5.js') }}?v={{ cache_bust }}-20250427-v4"></script>
     <!-- Bootstrap JS -->
     <script src="{{ url_for('static', filename='lib/bootstrap/bootstrap.bundle.min.js') }}"></script>
     {% block head %}{% endblock %}
@@ -65,5 +65,5 @@
     <div class="container">
         {% block content %}{% endblock %}
     </div>
-</body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93706b5c6c1e7bae',t:'MTc0NTc3ODkyMy4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
